--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,15 @@ logging.level.it.nextre.academy=DEBUG
 logging.level.org.springframework=WARN
 logging.file=realspring.log
 logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+
+#DB
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/filmrest?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+
+#Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
