--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,6 @@ logging.level.org.springframework=WARN
 logging.file=realspring.log
 logging.pattern.console= %d{yyyy-MM-dd HH:mm:ss} - %msg%n
 
-
 #DB
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
@@ -14,3 +13,7 @@ spring.datasource.password=root
 #Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#Jsp
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
